# amazegen

./: .gitignore  Cargo.toml  Readme.org  bacon.toml  make-sheet.sh  maze.org  toolchain.toml
amazegen/: Cargo.toml
amazegen/src/: lib.rs  maze.rs
amazegen/src/maze/: algorithms.rs  arengee.rs  feature.rs  interface.rs  mask.rs  paint.rs  shape.rs
amazegen/src/maze/paint/: delta.rs  rect.rs  sigma.rs  theta.rs
amazegen/src/maze/shape/: coordinates.rs  delta.rs  regular.rs  sigma.rs  theta.rs
amazegen_cli/: Cargo.toml
amazegen_cli/src/: main.rs
amazegen_printer/: Cargo.toml
amazegen_printer/src/: lib.rs  metadata.rs  pdf.rs
benches/: maze_synthesis.rs
src/: configuration.rs  lib.rs  main.rs  maze.rs  pdf.rs
src/maze/: algorithms.rs  arengee.rs  feature.rs  generator.rs  interface.rs  metadata.rs  paint.rs  polar.rs  regular.rs  shape.rs  solver.rs  theta.rs
src/maze/generator/: growing_tree.rs  kruskal.rs
src/maze/paint/: rect.rs  regular.rs  sigma.rs  svg.rs  theta.rs
src/maze/shape/: regular.rs  sigma.rs  theta.rs
web/amazegen-frontend/: .dir-locals.el  bun.lockb  index.html  package.json  rsbuild.config.ts
web/amazegen-frontend/src/: App.scss  App.tsx  Configuration.ts  Maze.tsx  font.ts  index.tsx
web/frontend/: .eslintrc.js  .gitignore  bun.lockb  index.html  package.json  rollup.config.js  vite.config.ts
web/frontend/src/: App.scss  App.tsx  Configuration.ts  Maze.tsx  font.ts  index.tsx  pdfkit.ts  pkg
