[package]
name = "maze"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib","cdylib"]
name = "amazegen"
path = "src/lib.rs"

[[bin]]
name = "maze-mk"
path = "src/main.rs"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = {version="2", features=["js"]}
# fastrand won't work with wasm unless we also add this line.
# See here: https://github.com/smol-rs/fastrand/issues/27
instant = {version="*", features=["wasm-bindgen"]}
svg = "0.18"
hex = "0.4"
itertools = "0.13"
rand_chacha = "0.3"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"
svg2pdf = "0.12.0"
clap = { version = "4.5.18", features = ["derive"] }
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }

[profile.release]
lto = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"]}

[[bench]]
name = "maze_synthesis"
harness = false
