[package]
name = "amazegen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib","cdylib"]
name = "amazegen"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = {version="2.3", features=["js"]}
# fastrand won't work with wasm unless we also add this line.
# See here: https://github.com/smol-rs/fastrand/issues/27
instant = {version="*", features=["wasm-bindgen"]}
svg = "0.18"
hex = "0.4"
itertools = "0.14"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2.100", features = ["msrv"] }
serde-wasm-bindgen = "0.6"
