[package]
name = "amazegen_printer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib","cdylib"]
name = "amazegen_printer"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.18"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"
svg2pdf = "0.12.0"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
pdf-writer = "0.12.1"
ttf-parser = "0.25.1"
amazegen = { path = "../amazegen" }
